bpo-46042: fix position of "duplicate argument" error message